.antlr/MPParser.py
# Generated from /home/tuongnv/Desktop/PPL_ANTLR4/Compiler_ANTLR4/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<>'", "'='", "'<'", "'>'", 
                     "'<='", "'>='", "<INVALID>", "'['", "']'", "':'", "'('", 
                     "')'", "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", "OF", 
                      "REAL", "BOOLEAN", "INTEGER", "STRING", "WITH", "ASSIGN", 
                      "ADD", "SUB", "MUL", "DIV", "NOT", "MOD", "OR", "AND", 
                      "NEQ", "EQ", "LT", "GT", "LTE", "GTE", "IDIV", "LSB", 
                      "RSB", "COLON", "LB", "RB", "SEMI", "DDOT", "COMMA", 
                      "INTLIT", "FLOATLIT", "BOOLLIT", "ID", "LEGAL_ESCAPE", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "STRINGLIT", "COMMENT1", 
                      "COMMENT2", "COMMENT3", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_declarations = 1
    RULE_declarations = 2
    RULE_var_decl = 3
    RULE_list_decl = 4
    RULE_decl = 5
    RULE_list_id = 6
    RULE_func_decl = 7
    RULE_param_list = 8
    RULE_not_null_param_list = 9
    RULE_param_decl = 10
    RULE_proc_decl = 11
    RULE_types = 12
    RULE_primitive_types = 13
    RULE_compound_types = 14
    RULE_array_types = 15
    RULE_operand = 16
    RULE_expression = 17
    RULE_expression_1 = 18
    RULE_expression_2 = 19
    RULE_expression_3 = 20
    RULE_expression_4 = 21
    RULE_expression_5 = 22
    RULE_expression_6 = 23
    RULE_element_arr = 24
    RULE_func_call = 25
    RULE_exp_list = 26
    RULE_not_null_exp_list = 27
    RULE_statement = 28
    RULE_assignment_statement = 29
    RULE_if_statement = 30
    RULE_while_statement = 31
    RULE_for_statement = 32
    RULE_break_statement = 33
    RULE_continue_statement = 34
    RULE_return_statement = 35
    RULE_compound_statement = 36
    RULE_list_statement = 37
    RULE_not_null_list_statement = 38
    RULE_with_statement = 39
    RULE_call_statement = 40

    ruleNames =  [ "program", "many_declarations", "declarations", "var_decl", 
                   "list_decl", "decl", "list_id", "func_decl", "param_list", 
                   "not_null_param_list", "param_decl", "proc_decl", "types", 
                   "primitive_types", "compound_types", "array_types", "operand", 
                   "expression", "expression_1", "expression_2", "expression_3", 
                   "expression_4", "expression_5", "expression_6", "element_arr", 
                   "func_call", "exp_list", "not_null_exp_list", "statement", 
                   "assignment_statement", "if_statement", "while_statement", 
                   "for_statement", "break_statement", "continue_statement", 
                   "return_statement", "compound_statement", "list_statement", 
                   "not_null_list_statement", "with_statement", "call_statement" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    RETURN=10
    WHILE=11
    BEGIN=12
    END=13
    FUNCTION=14
    PROCEDURE=15
    VAR=16
    ARRAY=17
    OF=18
    REAL=19
    BOOLEAN=20
    INTEGER=21
    STRING=22
    WITH=23
    ASSIGN=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    NOT=29
    MOD=30
    OR=31
    AND=32
    NEQ=33
    EQ=34
    LT=35
    GT=36
    LTE=37
    GTE=38
    IDIV=39
    LSB=40
    RSB=41
    COLON=42
    LB=43
    RB=44
    SEMI=45
    DDOT=46
    COMMA=47
    INTLIT=48
    FLOATLIT=49
    BOOLLIT=50
    ID=51
    LEGAL_ESCAPE=52
    ILLEGAL_ESCAPE=53
    UNCLOSE_STRING=54
    STRINGLIT=55
    COMMENT1=56
    COMMENT2=57
    COMMENT3=58
    WS=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declarations(self):
            return self.getTypedRuleContext(MPParser.Many_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.many_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(MPParser.DeclarationsContext,0)


        def many_declarations(self):
            return self.getTypedRuleContext(MPParser.Many_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_declarations




    def many_declarations(self):

        localctx = MPParser.Many_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_declarations)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.declarations()
                self.state = 85
                self.many_declarations()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.declarations()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MPParser.Func_declContext,0)


        def proc_decl(self):
            return self.getTypedRuleContext(MPParser.Proc_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declarations




    def declarations(self):

        localctx = MPParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.var_decl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.func_decl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.proc_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def list_decl(self):
            return self.getTypedRuleContext(MPParser.List_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_var_decl




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MPParser.VAR)
            self.state = 96
            self.list_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MPParser.DeclContext,0)


        def list_decl(self):
            return self.getTypedRuleContext(MPParser.List_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_decl




    def list_decl(self):

        localctx = MPParser.List_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_decl)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.decl()
                self.state = 99
                self.list_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_id(self):
            return self.getTypedRuleContext(MPParser.List_idContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_decl




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.list_id()
            self.state = 105
            self.match(MPParser.COLON)
            self.state = 106
            self.types()
            self.state = 107
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def COMMA(self):
            return self.getToken(MPParser.COMMA, 0)

        def list_id(self):
            return self.getTypedRuleContext(MPParser.List_idContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_id




    def list_id(self):

        localctx = MPParser.List_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_id)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(MPParser.ID)
                self.state = 110
                self.match(MPParser.COMMA)
                self.state = 111
                self.list_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl




    def func_decl(self):

        localctx = MPParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_decl)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(MPParser.FUNCTION)
                self.state = 116
                self.match(MPParser.ID)
                self.state = 117
                self.match(MPParser.LB)
                self.state = 118
                self.param_list()
                self.state = 119
                self.match(MPParser.RB)
                self.state = 120
                self.match(MPParser.COLON)
                self.state = 121
                self.types()
                self.state = 122
                self.match(MPParser.SEMI)
                self.state = 123
                self.var_decl()
                self.state = 124
                self.compound_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(MPParser.FUNCTION)
                self.state = 127
                self.match(MPParser.ID)
                self.state = 128
                self.match(MPParser.LB)
                self.state = 129
                self.param_list()
                self.state = 130
                self.match(MPParser.RB)
                self.state = 131
                self.match(MPParser.COLON)
                self.state = 132
                self.types()
                self.state = 133
                self.match(MPParser.SEMI)
                self.state = 134
                self.compound_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_null_param_list(self):
            return self.getTypedRuleContext(MPParser.Not_null_param_listContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_param_list




    def param_list(self):

        localctx = MPParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.not_null_param_list()
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Not_null_param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(MPParser.Param_declContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def not_null_param_list(self):
            return self.getTypedRuleContext(MPParser.Not_null_param_listContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_not_null_param_list




    def not_null_param_list(self):

        localctx = MPParser.Not_null_param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_not_null_param_list)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.param_decl()
                self.state = 143
                self.match(MPParser.SEMI)
                self.state = 144
                self.not_null_param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.param_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_id(self):
            return self.getTypedRuleContext(MPParser.List_idContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_param_decl




    def param_decl(self):

        localctx = MPParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.list_id()
            self.state = 150
            self.match(MPParser.COLON)
            self.state = 151
            self.types()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Proc_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proc_decl




    def proc_decl(self):

        localctx = MPParser.Proc_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_proc_decl)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(MPParser.PROCEDURE)
                self.state = 154
                self.match(MPParser.ID)
                self.state = 155
                self.match(MPParser.LB)
                self.state = 156
                self.param_list()
                self.state = 157
                self.match(MPParser.RB)
                self.state = 158
                self.match(MPParser.SEMI)
                self.state = 159
                self.var_decl()
                self.state = 160
                self.compound_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(MPParser.PROCEDURE)
                self.state = 163
                self.match(MPParser.ID)
                self.state = 164
                self.match(MPParser.LB)
                self.state = 165
                self.param_list()
                self.state = 166
                self.match(MPParser.RB)
                self.state = 167
                self.match(MPParser.SEMI)
                self.state = 168
                self.compound_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_types(self):
            return self.getTypedRuleContext(MPParser.Primitive_typesContext,0)


        def compound_types(self):
            return self.getTypedRuleContext(MPParser.Compound_typesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_types




    def types(self):

        localctx = MPParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_types)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.primitive_types()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.compound_types()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_types




    def primitive_types(self):

        localctx = MPParser.Primitive_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primitive_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_typesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_types(self):
            return self.getTypedRuleContext(MPParser.Array_typesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_compound_types




    def compound_types(self):

        localctx = MPParser.Compound_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_compound_types)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.array_types()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_typesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpressionContext,i)


        def DDOT(self):
            return self.getToken(MPParser.DDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitive_types(self):
            return self.getTypedRuleContext(MPParser.Primitive_typesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_array_types




    def array_types(self):
